[package]
name = "lawn-9p"
version = "0.1.0"
edition = "2018"

[dependencies]
lawn-constants = { path = "../lawn-constants", version = "0.1.0" }
hex = "0.4"
flurry = "0.4"
libc = "*"
bitflags = "1.3"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time" ] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["unix"]
unix = []
