[package]
name = "lawn-9p"
version = "0.3.0"
edition = "2018"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/bk2204/lawn"
description = "9P file system functionality for Lawn"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.63.0"

[dependencies]
lawn-constants = { path = "../lawn-constants", version = "0.3.0" }
lawn-fs = { path = "../lawn-fs", version = "0.3.0", features = ["unix"] }
hex = "0.4"
flurry = "0.4"
libc = "0.2"
bitflags = "1.3"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time" ] }
rustix = { version = "0.37", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["unix"]
unix = ["rustix"]
