[package]
name = "lawn-bin"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "lawn"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
libc = "*"
signal-hook-tokio = "0.3"
lawn-protocol = { path = "../lawn-protocol", version = "0.1.0", features = ["async"] }
tokio = { version = "1", features = [ "io-std", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "time" ] }
daemonize = "0.4"
num-traits = "0.2"
hex = "0.4"
