[package]
name = "lawn-constants"
version = "0.2.0"
edition = "2018"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/bk2204/lawn"
description = "error and logging types, traits, and codes for Lawn"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.48.0"

[dependencies]
libc = "0.2"
num-derive = "0.3"
num-traits = "0.2"
