[package]
name = "lawn-protocol"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["fs", "sync", "io-util"], optional = true }
num-traits = "0.2"
num-derive = "0.3"
lawn-errno = { path = "../lawn-errno", version = "0.1.0" }

[features]
async = ["tokio"]
