[package]
name = "lawn-protocol"
version = "0.2.0"
edition = "2018"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/bk2204/lawn"
description = "protocol types, traits, and codes for Lawn"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.48.0"

[dependencies]
bitflags = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["fs", "sync", "io-util"], optional = true }
num-traits = "0.2"
num-derive = "0.3"
lawn-constants = { path = "../lawn-constants", version = "0.2.0" }

[features]
async = ["tokio"]
