[package]
name = "lawn"
version = "0.1.0"
edition = "2018"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/bk2204/lawn"
description = "utility to interact with trusted remote development systems"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.48.0"

[[bin]]
name = "lawn"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
libc = "0.2"
signal-hook-tokio = "0.3"
lawn-constants = { path = "../lawn-constants", version = "0.1.0" }
lawn-9p = { path = "../lawn-9p", version = "0.1.0", features = ["unix"] }
lawn-protocol = { path = "../lawn-protocol", version = "0.1.0", features = ["async"] }
tokio = { version = "1", features = [ "io-std", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "time" ] }
tokio-pipe = "0.2"
daemonize = "0.4"
num-traits = "0.2"
num-derive = "0.3"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
